--- a/playbooks/netbox/ipam_99_reserved_IPs.yml
+++ b/playbooks/netbox/ipam_99_reserved_IPs.yml
@@ -7,6 +7,11 @@
 
   collections:
     - netbox.netbox
+  
+  vars:
+    ip_address:
+        -	address: 96.231.240.2
+        -	address: 96.231.240.3
 
   tasks:
     - name: Configure Reserve Public IP
@@ -14,12 +19,10 @@
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          address: '{{ item }}'
+          address: '{{ item.ip_address }}'
           site: 'SECNET HQ'
           tenant: 'secnet'
           status: 'reserved'
           role: Loopback
         state: present
-      loop:
-        -	96.231.240.2
-        -	96.231.240.3
+      with_items: "{{ ip_address }}"
