--- a/playbooks/firewall/network_interfaces.yml
+++ b/playbooks/firewall/network_interfaces.yml
@@ -273,36 +273,36 @@
         zone_name: "L3-WAN"
         vr_name: "default"
 
-    - name: Configuring ISP Uplink Interface
-      panos_interface:
-        provider: '{{ provider }}'
-        if_name: "ethernet1/1"
-        mode: "layer2"
-        vlan_name: "WAN"
-        zone_name: "L2-WAN"
+#    - name: Configuring ISP Uplink Interface
+#      panos_interface:
+#        provider: '{{ provider }}'
+#        if_name: "ethernet1/1"
+#        mode: "layer2"
+#        vlan_name: "WAN"
+#        zone_name: "L2-WAN"
 
-    - name: Configuring L2 LAN INT 2
-      panos_interface:
-        provider: '{{ provider }}'
-        if_name: "ethernet1/2"
-        mode: "layer2"
-        vlan_name: "WAN"
-        zone_name: "L2-LAN"
+#    - name: Configuring L2 LAN INT 2
+#      panos_interface:
+#        provider: '{{ provider }}'
+#        if_name: "ethernet1/2"
+#        mode: "layer2"
+#        vlan_name: "WAN"
+#        zone_name: "L2-LAN"
 
-    - name: Configuring L2 LAN INT 3
-      panos_interface:
-        provider: '{{ provider }}'
-        if_name: "ethernet1/3"
-        mode: "layer2"
-        vlan_name: "WAN"        
-        enable_dhcp: false
-        zone_name: "L2-LAN"
+#    - name: Configuring L2 LAN INT 3
+#      panos_interface:
+#        provider: '{{ provider }}'
+#        if_name: "ethernet1/3"
+#        mode: "layer2"
+#        vlan_name: "WAN"        
+#        enable_dhcp: false
+#        zone_name: "L2-LAN"
 
-    - name: Configuring L2 LAN INT 4
-      panos_interface:
-        provider: '{{ provider }}'
-        if_name: "ethernet1/4"
-        mode: "layer2"
-        vlan_name: "WAN"        
-        enable_dhcp: false
-        zone_name: "L2-LAN"
+#    - name: Configuring L2 LAN INT 4
+#      panos_interface:
+#        provider: '{{ provider }}'
+#        if_name: "ethernet1/4"
+#        mode: "layer2"
+#        vlan_name: "WAN"        
+#        enable_dhcp: false
+#        zone_name: "L2-LAN"
