--- a/inventory/group_vars/firewall.example
+++ b/inventory/group_vars/firewall.example
@@ -3,4 +3,7 @@
 ip_address: '10.0.0.1'
 api_key: 'place_your_api_key_here'
 
+
+zones_all: 'L3-Management','L3-Virtualization','L3-Authentication'
+
 wan_interface: 'vlan.9000'
