--- a/playbooks/firewall/policy_nat.yml
+++ b/playbooks/firewall/policy_nat.yml
@@ -12,6 +12,25 @@
       api_key: '{{ api_key }}'
 
   tasks:
+
+    - name: TMP NAT Policy
+      panos_nat_rule2:
+        provider: '{{ provider }}'
+        name: 'TMP NAT Policy'
+        description: 'TMP NAT Policy'
+        group_tag: 'OUTBOUND'
+        nat_type: 'ipv4'
+        from_zones: ['{{ zones_all }}']
+        to_zones: ['L3-WAN']
+        to_interface: 'vlan.9000'
+        service: 'any'
+        source_addresses: ['ZONE_L3-Endpoints']
+        destination_addresses: ['any']
+        source_translation_type: 'dynamic-ip-and-port'
+        source_translation_address_type: 'interface-address'
+        source_translation_interface: 'vlan.9000'
+        source_translation_ip_address: '96.231.240.210/24'
+          
     - name: TMP NAT Policy - MGT
       panos_nat_rule2:
         provider: '{{ provider }}'
@@ -125,3 +144,4 @@
         source_translation_address_type: 'interface-address'
         source_translation_interface: 'vlan.9000'
         source_translation_ip_address: '96.231.240.210/24'
+
