--- a/playbooks/firewall/policy_nat.yml
+++ b/playbooks/firewall/policy_nat.yml
@@ -12,25 +12,6 @@
       api_key: '{{ api_key }}'
 
   tasks:
-
-    - name: TMP NAT Policy
-      panos_nat_rule2:
-        provider: '{{ provider }}'
-        name: 'TMP NAT Policy'
-        description: 'TMP NAT Policy'
-        group_tag: 'OUTBOUND'
-        nat_type: 'ipv4'
-        from_zones: ['{{ zones_all }}']
-        to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
-        service: 'any'
-        source_addresses: ['ZONE_L3-Endpoints']
-        destination_addresses: ['any']
-        source_translation_type: 'dynamic-ip-and-port'
-        source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
-        source_translation_ip_address: '96.231.240.210/24'
-          
     - name: TMP NAT Policy - MGT
       panos_nat_rule2:
         provider: '{{ provider }}'
@@ -39,7 +20,7 @@
         tags: ['Management']
         group_tag: 'OUTBOUND'
         nat_type: 'ipv4'
-        from_zones: ['L3-Management']
+        from_zones: '{{ zone_mgt }}'
         to_zones: ['L3-WAN']
         to_interface: '{{ wan_interface }}'
         service: 'any'
@@ -58,7 +39,7 @@
         tags: ['Virtualization']
         group_tag: 'OUTBOUND'
         nat_type: 'ipv4'
-        from_zones: ['L3-Virtualization']
+        from_zones: '{{ zone_virt }}'
         to_zones: ['L3-WAN']
         to_interface: 'vlan.9000'
         service: 'any'
